# ebay-project

./: .gitignore  CLAUDE.md  README.md  day3-all-changes.patch  day3-fix-merge.patch  day31-c.patch  pyproject.toml
.github/workflows/: ci.yml  claude-code-review.yml  listing.yml  listing_final.yml  listing_publish.yml  listing_run.yml  listing_v2.yml  test_simple.yml
config/: ebay_config.example.json  ebay_config_template_filled.json
docs/: 35天每日开发计划.docx  35天计划摘要.md  EBAY_AUTO_PUBLISH_QUICKSTART.md  EBAY_ISSUE_ANALYSIS.md  EBAY_PERMISSION_SOLUTION.md  EBAY_PRODUCTION_SETUP.md  EBAY_SANDBOX_WEB_VERIFY.md  EBAY_TEST_SUMMARY.md  EBAY_TOKEN_KNOWLEDGE.md  README_EBAY.md  ebay_listing_summary.md  ebay系统架构设计_v2.docx  inventory_offline.md  inventory_online.md  架构设计_v2摘要.md
docs/daily/: 2026-04-14-day4-GOOGLEDRIVE.md  2026-04-14-day4.md  2026-04-14-day5.md  2026-04-14-day6.md  2026-04-15-day10.md  2026-04-15-day11.md  2026-04-15-day13.md  2026-04-15-day14.md  2026-04-15-day15.md  2026-04-15-day16.md  2026-04-15-day17.md  2026-04-15-day18.md  2026-04-15-day7.md  2026-04-15-day8.md  2026-04-15-day9.md  TEMPLATE.md  (+17 more)
ebay-ms/: .env.example  .gitignore  .pre-commit-config.yaml  main.py  requirements.txt
scripts/: README.md  ebay_bulk_create.py  ebay_create_location.py  ebay_full_listing_workflow.py  ebay_listing_auto.py  ebay_listing_complete.py  ebay_listing_generator.py  ebay_oauth_get_refresh_token.py  ebay_publish_by_sku.py  ebay_publish_fixed.py  ebay_publish_v3.py  ebay_sandbox_test_simple.py  ebay_token_manager.py  ebay_trading_additem.py  ebay_trading_simple.py
(+233 files in other folders)
